# sip-house-backend

./: .env  .env.template  .gitignore  Dockerfile  GEMINI.md  README.md  clean_arc.md  docker-compose.yaml  init_admin.py  main.py  package-lock.json  plan.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  deploy.yml  main.yaml  main.yml
alembic/: 21448a1416c2_merge_heads.py  35e3a11b9f7e_changed_type_to_json.py  39a9bbd4dfc3_pdf_url_to_pdf_ulrs.py  409146ea26ff_added_public_attr.py  53e2e8c694c3_changed_uuid_in_image_model.py  89a091305c24_changed_default_value_in_done_project_.py  a30b89c31d17_made_pdf_url_list.py  cc6c36b6444e_added_admins_table.py  da3500f50c3f_added_public_attribut.py  env.py  f17e41f7b17e_added_admin_table.py
alembic/versions/: 0aaedbc5745b_added_chat_id_to_messages_table.py  0c216d5136d6_removed_chat_id_form_messages_table.py  122939a8a7f5_added_chats_table.py  1b819f178195_added_done_project_table.py  1c944bb4ee2f_decimal.py  1c96324a4dd1_decimal.py  2026_01_27_0356-ed972effdbdc_full_db_version.py  2026_01_27_1139-cd0cd6b411aa_initial_baseline.py  2026_01_27_1205-15c84e1eeecb_added_tables_for_tg_bot.py  2026_01_28_0056-9fd21f310779_change_made_optional_uuid_for_projet_id_.py  2026_01_28_0212-a5665d9b433c_test_fix_added_default_for_done_project_.py  2026_01_28_0214-b30dfbb3a8bb_test_fix_added_default_for_done_project_.py  2026_01_30_2038-2bdeadb3cfce_new_init.py  2026_01_31_1443-99d28ff904bb_deleted_username_column.py  2026_01_31_1933-c02b0103c681_added_user_name_column.py  (+28 more)
tests/: chats_test.py  conftest.py
(+71 files in other folders)
